Some updates to various things. Can run on 2016 data using 102X now

--- a/Analyzers/trees2016DATA102X.ini
+++ b/Analyzers/trees2016DATA102X.ini
@@ -9,6 +9,7 @@ electrons = "<taskname>IsoElectrons"
 muons = "<taskname>IsoMuons"
 looseElectrons = "<taskname>LooseElectrons"
 looseMuons = "<taskname>LooseMuons"
+fatJets = "<taskname>ElectronCleanAK8Jets"
 jets = "<taskname>qualityJets"
 bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
