--- a/CfgMerge/mergeData2016HT.ini
+++ b/CfgMerge/mergeData2016HT.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV34DileptonTriggerPFHT
-basePath = /net/data_cms1b/user/teroerde/Cleaning/data_80X_HT
+tasks = cuts2016DileptonTriggerPFHT
+basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2016HT
 MCDatasets = .*_Summer12
-outPath = /net/data_cms1b/user/teroerde/data_80X_HT
+outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2016HT
 counterSum = True
 
-[dileptonTree:cutsV34DileptonTriggerPFHT]
+[dileptonTree:cuts2016DileptonTriggerPFHT]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*TriggerPFHT*
@@ -32,13 +32,9 @@ type = SimpleSelector
 #~ EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1
 #~ EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2
 #~ MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2
-EEExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 && ( HLT_PFHT125_v > 0 || HLT_PFHT200_v > 0 || HLT_PFHT250_v > 0 || HLT_PFHT300_v > 0 || HLT_PFHT350_v > 0 || HLT_PFHT400_v > 0 || HLT_PFHT475_v > 0 || HLT_PFHT600_v > 0 || HLT_PFHT650_v > 0 || HLT_PFHT800_v > 0 || HLT_PFHT900_v > 0)
-EMuExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 && ( HLT_PFHT125_v > 0 || HLT_PFHT200_v > 0 || HLT_PFHT250_v > 0 || HLT_PFHT300_v > 0 || HLT_PFHT350_v > 0 || HLT_PFHT400_v > 0 || HLT_PFHT475_v > 0 || HLT_PFHT600_v > 0 || HLT_PFHT650_v > 0 || HLT_PFHT800_v > 0 || HLT_PFHT900_v > 0)
-MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( HLT_PFHT125_v > 0 || HLT_PFHT200_v > 0 || HLT_PFHT250_v > 0 || HLT_PFHT300_v > 0 || HLT_PFHT350_v > 0 || HLT_PFHT400_v > 0 || HLT_PFHT475_v > 0 || HLT_PFHT600_v > 0 || HLT_PFHT650_v > 0 || HLT_PFHT800_v > 0 || HLT_PFHT900_v > 0)
-
-#~ [treeProcessor:CSCHaloFilter]
-#~ type = EventFilter
-#~ names = CfgMerge/muonBadTrack.txt CfgMerge/badResolutionTrack.txt CfgMerge/csc2015.txt CfgMerge/ecalscn1043093.txt
+EEExpression =  triggerSummaryHT > 0
+EMuExpression = triggerSummaryHT > 0
+MuMuExpression = triggerSummaryHT > 0
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
