--- a/Input/2016MC_102X.ini
+++ b/Input/2016MC_102X.ini
@@ -1,13 +1,9 @@
 [general]
-#additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
-# use below if JEC change. Do not forget to also change MET input-Tags in python config!
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC|16 metProducerMiniAODMC|16 prefireWeightProducer|16 ecalBadCalibFilterProducer
-#~ additionalProducers = EventCountProducer electronMVAProducer 
+additionalProducers = EventCountProducer electronMVAProducer|16 corrJetsProducer_MC|16 metProducerMiniAOD_MC|16 prefireWeightProducer|16 ecalBadCalibFilterProducer
 
 [crab]
-
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/Summer16_07Aug2017_V11_MC.db","/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_2016LegacySF_V1.csv"]
 units_per_job = 3
-#~ files_per_job = 1
 splitting = FileBased
 
 [102X]
