--- a/Input/Master102X_2018_MC.ini
+++ b/Input/Master102X_2018_MC.ini
@@ -374,7 +374,20 @@ crosssection = 0.2529
 negWeightFraction =  0.27
 datasetpath =  /TTZToLLNuNu_M-10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15_ext1-v2/MINIAODSIM
 
-[TTZToQQ_aMCatNLO_Autumn18_25ns] # not found yet
+[TTZToLL_aMCatNLO_Autumn18_25ns]
+status = CREATED
+numevents = -1
+#kfactor = 1.36
+kfactor = 1.00
+localevents = -1
+groups = MC CMSSW102X at13TeV Aachen Rare aMCatNLO Autumn18 at25ns MiniAOD
+# LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.2529 
+negWeightFraction =  0.27
+datasetpath =  /TTZToLL_M-1to10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
+
+# not found yet
+[TTZToQQ_aMCatNLO_Autumn18_25ns] 
 status = CREATED
 numevents = -1
 #kfactor = 1.31
