--- a/Input/Master94X_2016.ini
+++ b/Input/Master94X_2016.ini
@@ -196,8 +196,7 @@ localevents = -1
 groups = Data CMSSW94X at13TeV Aachen at25ns MuEG Run2016E
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath =  /MuonEG/Run2016E-17Jul2018-v1/MINIAOD
-localdbspath = /MuonEG/Run2016E-17Jul2018-v1/MINIAOD
+datasetpath =  /MuonEG/Run2016E-17Jul2018-v2/MINIAOD
 
 [MuEG_Run2016F]
 status = CREATED
@@ -409,6 +408,11 @@ datasetpath =
 localdbspath =
 
 [RelValData_94X]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[RelValData_2016]
 groups = AOD
 datasetpath = 
 localdbspath =
