--- a/Input/Master94X_2017.ini
+++ b/Input/Master94X_2017.ini
@@ -301,11 +301,11 @@ groups = AOD
 datasetpath = 
 localdbspath =
 
-[RelValTTbar_94X]
+[RelValTTbar_2017]
 groups = AOD
 datasetpath = 
 
-[RelValData_94X]
+[RelValData_2017]
 groups = AOD
 datasetpath = 
 localdbspath =
