--- a/Input/Master94X_2017_MC.ini
+++ b/Input/Master94X_2017_MC.ini
@@ -354,6 +354,16 @@ crosssection = 0.2529
 negweightfraction = 0.264
 datasetpath = /TTZToLLNuNu_M-10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
+[TTZToLL_aMCatNLO_Fall17_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.00
+localevents = -1
+groups = MC CMSSW94X at13TeV Aachen Rare aMCatNLO Fall17 at25ns MiniAODv2
+crosssection = 0.0493
+negweightfraction = 0.264
+datasetpath = /TTZToLL_M-1to10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
+
 [TTZToQQ_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
@@ -512,7 +522,7 @@ datasetpath =
 groups = AOD
 datasetpath =  
 
-[RelValTTbar_94X]
+[RelValTTbar_2017]
 groups = AOD
 datasetpath = 
 numevents = 1 
