--- a/Mix/mc2016.ini
+++ b/Mix/mc2016.ini
@@ -3,8 +3,11 @@ configs = Input/default102X.ini Input/2016MC_102X.ini Analyzers/trees2016MC102X.
 tasks = cuts2016Dilepton102X
 
 [relval]
-job = RelValTTbar_94X
+job = RelValTTbar_2016
 
 [synch]
 job = 94XSynch
 
+
+[full]
+groups = MC
