--- a/Input/2017Data_102X.ini
+++ b/Input/2017Data_102X.ini
@@ -4,9 +4,8 @@ additionalProducers = EventCountProducer electronMVAProducer|17 corrJetsProducer
 [crab]
 lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_294927-306462_13TeV_EOY2017ReReco_Collisions17_JSON.txt
 splitting = LumiBased
-units_per_job = 60
-#additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_DATA.db"]
-
+units_per_job = 40
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_DATA.db"]
 
 [102X]
 master_list = <general|InputPath>/Master94X_2017.ini
