--- a/Input/default102X.ini
+++ b/Input/default102X.ini
@@ -11,7 +11,7 @@ additionalProducers = EventCountProducer electronMVAProducer
 
 groups = StandardModel SUSY
        CMSSW94X CMSSW102X
-       Aachen Imperial FastSim Scan CMSSM Fall17 Summer18 Autumn18
+       Aachen Imperial FastSim Scan CMSSM Summer16 Spring16 Fall17 Autumn18
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T6bbllslepton
        at13TeV at25ns noPU
@@ -39,7 +39,7 @@ analysispath = <general|OutputPath>/PAT
 localhistopath = <general|OutputPath>/PAT/Histos
 localjobhistopath = <general|OutputPath>/PAT/TestHistos
 mergedhistopath = <general|OutputPath>/PAT/MergedHistos
-tasksPath =  <general|InputPath>/../tasks <general|OutputPath>/tasksNewStyle
+tasksPath =  <general|InputPath>/../tasks
 analogpath = <general|OutputPath>/LOG/analysis
 inputDBS = global
 storagepath = <general|SitePath>/mteroerd
