Some smaller updates, fat jets, loose b jets

--- a/Input/2017Data_94X.ini
+++ b/Input/2017Data_94X.ini
@@ -1,14 +1,12 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer|17 metProducerMiniAOD|17 prefireWeightProducer|17
+additionalProducers = EventCountProducer electronMVAProducer|17 corrJetsProducer|17 metProducerMiniAOD|17 prefireWeightProducer|17 ecalBadCalibFilterProducer
 
 [crab]
-lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_294927-306462_13TeV_EOY2017ReReco_Collisions17_JSON_v1.txt
+lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_294927-306462_13TeV_EOY2017ReReco_Collisions17_JSON.txt
 splitting = LumiBased
-units_per_job = 100
-
+units_per_job = 40
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_DATA.db"]
 
 [94X]
 master_list = <general|InputPath>/Master94X_2017.ini
-#~ globalTag = 74X_dataRun2_Prompt_v2
-#globalTag = 80X_dataRun2_2016SeptRepro_v7
 globalTag = 94X_dataRun2_v11
