--- a/Input/2018Data_102X.ini
+++ b/Input/2018Data_102X.ini
@@ -1,12 +1,14 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer|18 corrJetsProducer|18 metProducerMiniAOD|18 prefireWeightProducer|18 ecalBadCalibFilterProducer
+additionalProducers = EventCountProducer electronMVAProducer|18 corrJetsProducer|18 metProducerMiniAOD|18  prefireWeightProducer|18 ecalBadCalibFilterProducer
+# 
 
 [crab]
 lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_314472-325175_13TeV_PromptReco_Collisions18_JSON.txt
 splitting = LumiBased
 units_per_job = 40
-additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_102XSF_V1.csv","/net/data_cms1b/user/teroerde/InputFiles/Autumn18_RunABCD_V8_DATA.db"]
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_102XSF_V1.csv"]
+# "/net/data_cms1b/user/teroerde/InputFiles/Autumn18_RunABCD_V8_DATA.db"
 
 [102X]
 master_list = <general|InputPath>/Master102X_2018.ini
-globalTag = 102X_dataRun2_Sep2018Rereco_v1
+globalTag = 102X_dataRun2_v11
