--- a/Mix/data2018.ini
+++ b/Mix/data2018.ini
@@ -3,7 +3,8 @@ configs = Input/default102X.ini Input/2018Data_102X.ini Analyzers/trees2018DATA1
 
 
 [relval]
-tasks = cuts2018DileptonMuEG102X
+#tasks = cuts2018DileptonMuEG102X
+tasks = cuts2018DileptonDoubleElectron102X
 job = RelValData_2018
 
 [EE] 
