--- a/Analyzers/trees2017DATA102X.ini
+++ b/Analyzers/trees2017DATA102X.ini
@@ -11,10 +11,12 @@ looseElectrons = "<taskname>LooseElectrons"
 looseMuons = "<taskname>LooseMuons"
 fatJets = "<taskname>ElectronCleanAK8Jets"
 jets = "<taskname>qualityJets"
+looseBJets = "<taskname>looseBJets"
 bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
 isoTracks = "<taskname>basicIsolatedTracks"
 vertices = "<taskname>basicVertices"
+met = cms.InputTag("slimmedMETsModifiedMET", "", "Analysis")
 storeMetFilters = True
 bTagEfficiencies = bTagEffMapPars2017
 BTagCalibration = BTagCalibrationPars2017
