--- a/Analyzers/trees2018DATA102X.ini
+++ b/Analyzers/trees2018DATA102X.ini
@@ -11,6 +11,7 @@ looseElectrons = "<taskname>LooseElectrons"
 looseMuons = "<taskname>LooseMuons"
 fatJets = "<taskname>ElectronCleanAK8Jets"
 jets = "<taskname>qualityJets"
+looseBJets = "<taskname>looseBJets"
 bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
 isoTracks = "<taskname>basicIsolatedTracks"
