--- a/Input/2017MC_94X.ini
+++ b/Input/2017MC_94X.ini
@@ -1,10 +1,11 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer_MC|17 metProducerMiniAOD_MC|17 prefireWeightProducer|17 
+additionalProducers = EventCountProducer electronMVAProducer|17 corrJetsProducer_MC|17 metProducerMiniAOD_MC|17 prefireWeightProducer|17 ecalBadCalibFilterProducer
 
 [crab]
 units_per_job = 3
 splitting = FileBased
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_MC.db"]
 
 [94X]
 master_list = <general|InputPath>/Master94X_2017_MC.ini
-globalTag = 94X_mc2017_realistic_v17
+globalTag = 102X_mc2017_realistic_v17
