--- a/Input/default94X.ini
+++ b/Input/default94X.ini
@@ -6,20 +6,18 @@ SitePath = /store/user
 CSA = 94X
 email = $USER@cern.ch
 
-
-
 makeCountHistos = True 
 additionalProducers = EventCountProducer electronMVAProducer
 
-
 groups = StandardModel SUSY
-       CMSSW94X
-       Aachen Imperial FastSim Scan CMSSM Fall17
+       CMSSW94X CMSSW102X
+       Aachen Imperial FastSim Scan CMSSM Summer16 Spring16 Fall17 Autumn18
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T6bbllslepton
        at13TeV at25ns noPU
-       SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
-       Data MC AOD RelVal MiniAODv2 ReReco
+       SingleElectron DoubleElectron SingleMuon DoubleMu HT MuEG MET 
+       Data MC AOD RelVal MiniAOD MiniAODv2 MiniAODv3 ReReco
+       Run2018A Run2018B Run2018C Run2018D
        Run2017B Run2017C Run2017D Run2017E Run2017F
        Run2016B Run2016C Run2016D Run2016E Run2016F Run2016G Run2016H
        
@@ -38,10 +36,10 @@ monteCarloAvailable = True
 localdatapath = /net/data_cms1b/user/$USER/LocalInput
 globalTag =  94X_dataRun2_ReReco_EOY17_v6
 analysispath = <general|OutputPath>/PAT
-localjobhistopath = <general|OutputPath>/PAT/TestHistos
 localhistopath = <general|OutputPath>/PAT/Histos
+localjobhistopath = <general|OutputPath>/PAT/TestHistos
 mergedhistopath = <general|OutputPath>/PAT/MergedHistos
-tasksPath =  <general|InputPath>/../tasks <general|OutputPath>/tasksNewStyle
+tasksPath =  <general|InputPath>/../tasks
 analogpath = <general|OutputPath>/LOG/analysis
 inputDBS = global
 storagepath = <general|SitePath>/mteroerd
@@ -49,4 +47,4 @@ histogramstoragepath = <general|SitePath>/mteroerd/data/Histos
 histogramoutputpath = <general|SiteOutputPath>/mteroerd/data/Histos
 cmsstoragepath = <general|SitePath>
 storage_element= grid-srm.physik.rwth-aachen.de
-master_list = <general|InputPath>/Master94X_2017.ini
+master_list = <general|InputPath>/Master102X_2018.ini
