--- a/Mix/mc2017.ini
+++ b/Mix/mc2017.ini
@@ -3,7 +3,7 @@ configs = Input/default102X.ini Input/2017MC_102X.ini Analyzers/trees2017MC102X.
 tasks = cuts2017Dilepton102X
 
 [relval]
-job = RelValTTbar_94X
+job = RelValTTbar_2017
 
 [synch]
 job = 94XSynch
