Updated object IDs, added support for Signal MC of all years

--- a/Analyzers/signalNominatorTrees.ini
+++ b/Analyzers/signalNominatorTrees.ini
@@ -1,6 +1,7 @@
 [Analyzer:FinalTrees]
 type = GenericAnalyzer
 path = SuSyAachen.DiLeptonHistograms.signalNominatorTrees_cfi
+imports = isolationFunctor
 module = signalNominatorTrees
 electrons = "<taskname>IsoElectrons"
 muons = "<taskname>IsoMuons"
