--- a/Analyzers/trees2016Signal102X.ini
+++ b/Analyzers/trees2016Signal102X.ini
@@ -1,9 +1,9 @@
 [Analyzer:FinalTrees]
 type = GenericAnalyzer
-path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
-module = DiLeptonTreesFromMiniAODNoTaus
-imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeights,vertexWeightsUp,vertexWeightsDown,btagEffMap,isolationFunctor
-#electrons = "<taskname>MVAElectrons"
+path = SuSyAachen.DiLeptonHistograms.DiLeptonSystematicTreesFromMiniAOD_cfi
+module = DiLeptonSystematicTreesFromMiniAODNoTaus
+imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,LeptonFastSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeightsSignal,vertexWeightsSignalUp,vertexWeightsSignalDown,btagEffMap,isolationFunctor
+#electrons = "<taskname>d0Electrons"
 electrons = "<taskname>IsoElectrons"
 #muons = "<taskname>basicMuonsPAT"
 muons = "<taskname>IsoMuons"
@@ -16,20 +16,16 @@ bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
 isoTracks = "<taskname>basicIsolatedTracks"
 vertices = "<taskname>basicVertices"
-storeMetFilters = True
 met = cms.InputTag("slimmedMETs", "", "Analysis")
-bTagEfficiencies = bTagEffMapPars2016
+storeMetFilters = True
+bTagEfficiencies = bTagEffMapParsFastSim2016
 BTagCalibration = BTagCalibrationPars2016
 BTagCalibrationReader = BTagCalibrationReaderPars2016
 LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2016
+LeptonFastSimScaleFactors = LeptonFastSimScaleFactorMapPars2016
 vertexWeights = vertexWeightsPars2016
 vertexWeightsUp = vertexWeightsParsUp2016
 vertexWeightsDown = vertexWeightsParsDown2016
 isolationDefinitions = isolationDefinitions2016
-metFilterNames=metFilterNamesFullSim2016
-eeTriggerNames=eeTriggerNames2016
-emTriggerNames=emTriggerNames2016
-mmTriggerNames=mmTriggerNames2016
-htTriggerNames=htTriggerNames2016
-metTriggerNames=metTriggerNames2016
+metFilterNames=metFilterNamesFastSim2016
 
