--- a/Analyzers/trees2018Signal102X.ini
+++ b/Analyzers/trees2018Signal102X.ini
@@ -1,8 +1,8 @@
 [Analyzer:FinalTrees]
 type = GenericAnalyzer
-path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
-module = DiLeptonTreesFromMiniAODNoTaus
-imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeights,vertexWeightsUp,vertexWeightsDown,btagEffMap,isolationFunctor
+path = SuSyAachen.DiLeptonHistograms.DiLeptonSystematicTreesFromMiniAOD_cfi
+module = DiLeptonSystematicTreesFromMiniAODNoTaus
+imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,LeptonFastSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeightsSignal,vertexWeightsSignalUp,vertexWeightsSignalDown,btagEffMap,isolationFunctor
 #electrons = "<taskname>d0Electrons"
 electrons = "<taskname>IsoElectrons"
 #muons = "<taskname>basicMuonsPAT"
@@ -19,18 +19,14 @@ vertices = "<taskname>basicVertices"
 met = cms.InputTag("slimmedMETs", "", "Analysis")
 #met = cms.InputTag("slimmedMETs")
 storeMetFilters = True
-bTagEfficiencies = bTagEffMapPars2018
+bTagEfficiencies = bTagEffMapParsFastSim2018
 BTagCalibration = BTagCalibrationPars2018
 BTagCalibrationReader = BTagCalibrationReaderPars2018
 LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2018
+LeptonFastSimScaleFactors = LeptonFastSimScaleFactorMapPars2018
 vertexWeights = vertexWeightsPars2018
 vertexWeightsUp = vertexWeightsParsUp2018
 vertexWeightsDown = vertexWeightsParsDown2018
 isolationDefinitions = isolationDefinitions2018
-metFilterNames=metFilterNamesFullSim2018
-eeTriggerNames=eeTriggerNames2018
-emTriggerNames=emTriggerNames2018
-mmTriggerNames=mmTriggerNames2018
-htTriggerNames=htTriggerNames2018
-metTriggerNames=metTriggerNames2018
+metFilterNames=metFilterNamesFastSim2018
 
