--- a/CfgMerge/mergeData2017B.ini
+++ b/CfgMerge/mergeData2017B.ini
@@ -7,7 +7,7 @@ counterSum = True
 
 [dileptonTree:cuts2017Dilepton]
 treeProducerName = FinalTrees
-objects = EE EMu MuMu
+objects = MuMu EE EMu
 #~ EEDataset = .*DoubleElectron_Run2016B*
 EEDataset = .*on_Run2017B*
 EESelection = 
@@ -34,9 +34,6 @@ type = SimpleSelector
 EEExpression = ( triggerSummary > 0)
 EMuExpression =  ( triggerSummary > 0)
 MuMuExpression =  ( triggerSummary > 0)
-#~ EEExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 
-#~ EMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 
-#~ MuMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
