--- a/CfgMerge/mergeData2017D.ini
+++ b/CfgMerge/mergeData2017D.ini
@@ -7,14 +7,12 @@ counterSum = True
 
 [dileptonTree:cuts2017Dilepton]
 treeProducerName = FinalTrees
-objects = EE EMu MuMu
-#~ EEDataset = .*DoubleElectron_Run2016B*
+objects = MuMu EE EMu
 EEDataset = .*on_Run2017D*
 EESelection = 
 EEProcessors = overlapHighPt 
 EEFilter = overlapHighPt
 
-#~ EMuDataset = .*MuEG_Run2016B*
 EMuDataset = .*Run2017D*
 EMuSelection = 
 EMuProcessors = overlapHighPt 
@@ -34,9 +32,6 @@ type = SimpleSelector
 EEExpression = ( triggerSummary > 0)
 EMuExpression =  ( triggerSummary > 0)
 MuMuExpression =  ( triggerSummary > 0)
-#~ EEExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 
-#~ EMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 
-#~ MuMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 
 
 
 [treeProcessor:overlapHighPt]
