--- a/Input/2018MC_102X.ini
+++ b/Input/2018MC_102X.ini
@@ -5,8 +5,8 @@ additionalProducers = EventCountProducer electronMVAProducer|18 corrJetsProducer
 [crab]
 units_per_job = 3
 splitting = FileBased
-additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_102XSF_V1.csv"]
-# "/net/data_cms1b/user/teroerde/InputFiles/Autumn18_V8_MC.db"
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_102XSF_V1.csv","/net/data_cms1b/user/teroerde/InputFiles/Autumn18_V19_MC.db"]
+# 
 
 [102X]
 master_list = <general|InputPath>/Master102X_2018_MC.ini
