--- a/Input/Master102X_2018_MC.ini
+++ b/Input/Master102X_2018_MC.ini
@@ -22,7 +22,7 @@ crosssection = 5765.4
 negWeightFraction = 0
 datasetpath = /DYJetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
-[ZJets_aMCatNLO_FXFX_Autumn18_25ns]
+[ZJets_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -36,7 +36,7 @@ datasetpath = /DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIIAutumn18M
 
 ##### Diboson aMCatNLO
 
-[WWTo1L1Nu2Q_aMCatNLO_FXFX_Autumn18_25ns]
+[WWTo1L1Nu2Q_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -48,7 +48,7 @@ negWeightFraction = 0.20
 datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-[WZTo1L3Nu_aMCatNLO_FXFX_Autumn18_25ns]
+[WZTo1L3Nu_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -61,7 +61,7 @@ negWeightFraction = 0.22
 datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-#[WZTo1L1Nu2Q_aMCatNLO_FXFX_Autumn18_25ns] # not found yet
+#[WZTo1L1Nu2Q_aMCatNLO_Autumn18_25ns] # not found yet
 #status = CREATED
 #numevents = -1
 #kfactor = 1.06
@@ -72,7 +72,7 @@ datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIIAutumn18MiniAOD
 #negWeightFraction = 0.215
 #datasetpath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIAutumn18MiniAOD-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
-[WZTo2L2Q_aMCatNLO_FXFX_Autumn18_25ns]
+[WZTo2L2Q_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -84,7 +84,7 @@ negWeightFraction = 0.215
 datasetpath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-[WZTo3LNu_aMCatNLO_FXFX_Autumn18_25ns]
+[WZTo3LNu_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -95,7 +95,7 @@ crosssection = 4.102
 negWeightFraction = 0.215
 datasetpath = /WZTo3LNu_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
-[ZZTo2Q2Nu_aMCatNLO_FXFX_Autumn18_25ns]
+[ZZTo2Q2Nu_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.71
@@ -106,7 +106,7 @@ negWeightFraction = 0.2
 datasetpath = /ZZTo2Q2Nu_TuneCP5_13TeV_amcatnloFXFX_madspin_pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-[ZZTo2L2Q_aMCatNLO_FXFX_Autumn18_25ns]
+[ZZTo2L2Q_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.71
@@ -399,7 +399,7 @@ crosssection = 0.5297
 negWeightFraction = 0.26
 datasetpath =  /TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
-[TTWToLNu_aMCatNLO_FXFX_Autumn18_25ns]
+[TTWToLNu_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -410,7 +410,7 @@ crosssection = 0.2043
 negWeightFraction = 0.24
 datasetpath =  /TTWJetsToLNu_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15_ext1-v2/MINIAODSIM
 
-[TTWToQQ_aMCatNLO_FXFX_Autumn18_25ns]
+[TTWToQQ_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -422,7 +422,7 @@ negWeightFraction = 0.24
 datasetpath =  /TTWJetsToQQ_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-[TTG_aMCatNLO_FXFX_Autumn18_25ns]
+[TTG_aMCatNLO_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -567,6 +567,11 @@ groups = AOD
 datasetpath = 
 
 [RelValData_2018]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[Synch_2018]
 groups = AOD
 datasetpath = 
 localdbspath =
