--- a/Input/Master94X_2016_MC.ini
+++ b/Input/Master94X_2016_MC.ini
@@ -19,7 +19,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen DrellYan aMCatNLO Summer16 at25ns MiniAODv3
 #https://twiki.cern.ch/twiki/bin/view/CMS/SummaryTable1G25ns
 #3*1921.8 (NNLO)
-crosssection = 5765.4
+crosssection = 6077.22
 negWeightFraction = 0.136
 datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext2-v1/MINIAODSIM
 
@@ -46,7 +46,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen DrellYan Madgraph Summer16 at25ns MiniAODv3
 #3*1921.8 (NNLO) https://twiki.cern.ch/twiki/bin/view/CMS/SummaryTable1G25ns
 #~ crosssection = 5765.4
-crosssection = 6025.2
+crosssection = 6225.42
 negWeightFraction = 0.0
 datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext1-v2/MINIAODSIM
 localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext1-v2/MINIAODSIM
@@ -408,7 +408,7 @@ datasetpath =  /TTJets_DiLept_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer
 localdbspath = /TTJets_DiLept_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
 
-#[TT_Dilepton_aMCatNLO_FXFX_Summer16_25ns]
+#[TT_Dilepton_aMCatNLO_Summer16_25ns]
 #status = CREATED
 #numevents = -1
 #kfactor = 1.
@@ -469,7 +469,7 @@ negWeightFraction =  0.
 datasetpath =  /ttZJets_13TeV_madgraphMLM-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v1/MINIAODSIM
 localdbspath =  /ttZJets_13TeV_madgraphMLM-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v1/MINIAODSIM
 
-[TTZToLLNuNu_aMCatNLO_FXFX_Summer16_25ns]
+[TTZToLLNuNu_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 #kfactor = 1.36
@@ -482,7 +482,7 @@ negWeightFraction =  0.27
 datasetpath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext3-v1/MINIAODSIM
 localdbspath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext3-v1/MINIAODSIM
 
-[TTZToLL_aMCatNLO_FXFX_Summer16_25ns]
+[TTZToLL_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 #kfactor = 1.36
@@ -494,7 +494,7 @@ crosssection = 0.0493
 negWeightFraction =  0.27
 datasetpath =  /TTZToLL_M-1to10_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv3-94X_mcRun2_asymptotic_v3-v1/MINIAODSIM
 
-[TTZToQQ_aMCatNLO_FXFX_Summer16_25ns]
+[TTZToQQ_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 #kfactor = 1.31
@@ -507,7 +507,7 @@ negWeightFraction = 0.26
 datasetpath =  /TTZToQQ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 localdbspath =  /TTZToQQ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
-[TTWToLNu_aMCatNLO_FXFX_Summer16_25ns]
+[TTWToLNu_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -519,7 +519,7 @@ negWeightFraction = 0.24
 datasetpath =  /TTWJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext2-v1/MINIAODSIM
 localdbspath =  /TTWJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3_ext2-v1/MINIAODSIM
 
-[TTWToQQ_aMCatNLO_FXFX_Summer16_25ns]
+[TTWToQQ_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -532,7 +532,7 @@ datasetpath =  /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunI
 localdbspath =  /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
 
-[TTG_aMCatNLO_FXFX_Summer16_25ns]
+[TTG_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -544,7 +544,7 @@ negWeightFraction = 0.34
 datasetpath =  /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 localdbspath =  /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
-[TTG_Dilepton_aMCatNLO_FXFX_Summer16_25ns]
+[TTG_Dilepton_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -559,7 +559,7 @@ localdbspath =  /TTGamma_Dilept_TuneCUETP8M2T4_13TeV-amcatnlo-pythia8/RunIISumme
 ### Rare stuff
 
 
-[WWZ_aMCatNLO_FXFX_Summer16_25ns]
+[WWZ_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -571,7 +571,7 @@ negWeightFraction = 0.055
 datasetpath =  /WWZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 localdbspath =  /WWZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
-[WZZ_aMCatNLO_FXFX_Summer16_25ns]
+[WZZ_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -583,7 +583,7 @@ negWeightFraction = 0.06
 datasetpath =  /WZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 localdbspath =  /WZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
-[ZZZ_aMCatNLO_FXFX_Summer16_25ns]
+[ZZZ_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -595,7 +595,7 @@ negWeightFraction = 0.07
 datasetpath =  /ZZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 localdbspath =  /ZZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv3-PUMoriond17_94X_mcRun2_asymptotic_v3-v2/MINIAODSIM
 
-[4T_aMCatNLO_FXFX_Summer16_25ns]
+[4T_aMCatNLO_Summer16_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -700,6 +700,11 @@ localdbspath =
 numevents = 1
 
 [RelValTTbar_2016]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[Synch_2016]
 groups = AOD
 datasetpath = 
 localdbspath =
