--- a/Input/Master94X_2017_MC.ini
+++ b/Input/Master94X_2017_MC.ini
@@ -6,8 +6,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen DrellYan Madgraph Fall17 at25ns MiniAODv2
 crosssection = 18610
 negweightfraction = 0.000
-datasetpath = /DYJetsToLL_M-10to50_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
-localdbspath = /DYJetsToLL_M-10to50_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /DYJetsToLL_M-10to50_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v2/MINIAODSIM
 
 [ZJets_MadGraph_Fall17_25ns]
 status = CREATED
@@ -19,7 +18,7 @@ crosssection = 5765.4
 negweightfraction = 0.000
 datasetpath = /DYJetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIFall17MiniAODv2-PU2017RECOSIMstep_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
 
-[ZJets_aMCatNLO_FXFX_Fall17_25ns]
+[ZJets_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -29,7 +28,7 @@ crosssection = 6024.0
 negweightfraction = 0.161
 datasetpath = /DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_new_pmx_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
 
-[WWTo1L1Nu2Q_aMCatNLO_FXFX_Fall17_25ns]
+[WWTo1L1Nu2Q_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -38,9 +37,8 @@ groups = MC CMSSW94X at13TeV Aachen Diboson aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 49.997
 negweightfraction = 0.186
 datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
-localdbspath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[WZTo1L3Nu_aMCatNLO_FXFX_Fall17_25ns]
+[WZTo1L3Nu_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -51,7 +49,7 @@ negweightfraction = 0.228
 datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8_v2/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 localdbspath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8_v2/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[WZTo1L1Nu2Q_aMCatNLO_FXFX_Fall17_25ns]
+[WZTo1L1Nu2Q_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -61,7 +59,7 @@ crosssection = 10.71
 negweightfraction = 0.203
 datasetpath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
-[WZTo2L2Q_aMCatNLO_FXFX_Fall17_25ns]
+[WZTo2L2Q_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -71,7 +69,7 @@ crosssection = 5.60
 negweightfraction = 0.198
 datasetpath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[WZTo3LNu_aMCatNLO_FXFX_Fall17_25ns]
+[WZTo3LNu_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.06
@@ -81,7 +79,7 @@ crosssection = 4.666
 negweightfraction = 0.187
 datasetpath = /WZTo3LNu_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_new_pmx_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[ZZTo2Q2Nu_aMCatNLO_FXFX_Fall17_25ns]
+[ZZTo2Q2Nu_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.71
@@ -91,7 +89,7 @@ crosssection = 4.04
 negweightfraction = 0.184
 datasetpath = /ZZTo2Q2Nu_TuneCP5_13TeV_amcatnloFXFX_madspin_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[ZZTo2L2Q_aMCatNLO_FXFX_Fall17_25ns]
+[ZZTo2L2Q_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.71
@@ -109,7 +107,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Diboson Powheg Fall17 at25ns MiniAODv2
 crosssection = 1.256
 negweightfraction = 0.005
-datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
+datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext2-v1/MINIAODSIM
 
 [ZZTo2L2Nu_Powheg_Fall17_25ns]
 status = CREATED
@@ -130,7 +128,6 @@ groups = MC CMSSW94X at13TeV Aachen Diboson Powheg Fall17 at25ns MiniAODv2
 crosssection = 4.43
 negweightfraction = 0.005
 datasetpath = /WZTo3LNu_13TeV-powheg-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
-localdbspath = /WZTo3LNu_13TeV-powheg-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [WWTo2L2Nu_Powheg_Fall17_25ns]
 status = CREATED
@@ -160,7 +157,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Diboson Powheg Fall17 at25ns MiniAODv2
 crosssection = 43.53
 negweightfraction = 0.002
-datasetpath = /WWToLNuQQ_NNPDF31_TuneCP5_13TeV-powheg-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
+datasetpath = /WWToLNuQQ_NNPDF31_TuneCP5_13TeV-powheg-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_new_pmx_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
 [GluGluToContinToZZTo2e2mu_Fall17_25ns]
 status = CREATED
@@ -220,7 +217,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen SingleTop Powheg Fall17 at25ns MiniAODv2
 crosssection = 80.95
 negweightfraction = 0.000
-datasetpath = /ST_t-channel_antitop_4f_inclusiveDecays_TuneCP5_13TeV-powhegV2-madspin-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /ST_t-channel_antitop_4f_inclusiveDecays_TuneCP5_13TeV-powhegV2-madspin-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [ST_top_tChannel_4f_Powheg_Fall17_25ns]
 status = CREATED
@@ -271,7 +268,6 @@ groups = MC CMSSW94X at13TeV Aachen SingleTop Powheg Fall17 at25ns MiniAODv2
 crosssection = 3.36
 negweightfraction = 0.188
 datasetpath = /ST_s-channel_4f_leptonDecays_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
-localdbspath = /ST_s-channel_4f_leptonDecays_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [WJetsToLNu_aMCatNLO_Fall17_25ns]
 status = CREATED
@@ -282,7 +278,6 @@ groups = MC CMSSW94X at13TeV Aachen WJets aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 61526.7
 negweightfraction = 0.099
 datasetpath = /WJetsToLNu_0J_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
-localdbspath = /WJetsToLNu_0J_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [TTJets_Dilepton_Madgraph_MLM_Fall17_25ns]
 status = CREATED
@@ -352,7 +347,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Rare aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 0.2529
 negweightfraction = 0.264
-datasetpath = /TTZToLLNuNu_M-10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /TTZToLLNuNu_M-10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [TTZToLL_aMCatNLO_Fall17_25ns]
 status = CREATED
@@ -372,9 +367,9 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Rare aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 0.5297
 negweightfraction = 0.262
-datasetpath = /TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
 
-[TTWToLNu_aMCatNLO_FXFX_Fall17_25ns]
+[TTWToLNu_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -384,7 +379,7 @@ crosssection = 0.2043
 negweightfraction = 0.226
 datasetpath = /TTWJetsToLNu_TuneCP5_PSweights_13TeV-amcatnloFXFX-madspin-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_new_pmx_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[TTWToQQ_aMCatNLO_FXFX_Fall17_25ns]
+[TTWToQQ_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -392,7 +387,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Rare aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 0.4062
 negweightfraction = 0.228
-datasetpath = /TTWJetsToQQ_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /TTWJetsToQQ_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [TTW_Madgraph_Fall17_25ns]
 status = CREATED
@@ -404,7 +399,7 @@ crosssection = 0.6105
 negweightfraction = 0.24
 datasetpath = /ttWJets_TuneCP5_13TeV_madgraphMLM_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
 
-[TTG_aMCatNLO_FXFX_Fall17_25ns]
+[TTG_aMCatNLO_Fall17_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -432,7 +427,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Rare aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 0.1651
 negweightfraction = 0.057
-datasetpath = /WWZ_4F_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /WWZ_4F_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [WZZ_aMCatNLO_Fall17_25ns]
 status = CREATED
@@ -452,7 +447,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Rare aMCatNLO Fall17 at25ns MiniAODv2
 crosssection = 0.01398
 negweightfraction = 0.073
-datasetpath = /ZZZ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /ZZZ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
 
 [4T_aMCatNLO_Fall17_25ns]
 status = CREATED
@@ -512,7 +507,7 @@ localevents = -1
 groups = MC CMSSW94X at13TeV Aachen Rare Powheg Fall17 at25ns MiniAODv2
 crosssection = 0.1
 negweightfraction = 0.029
-datasetpath = /ZH_HToBB_ZToLL_M125_13TeV_powheg_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+datasetpath = /ZH_HToBB_ZToLL_M125_13TeV_powheg_pythia8/RunIIFall17MiniAODv2-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
 
 [SynchFiles]
 groups = AOD
@@ -527,7 +522,7 @@ groups = AOD
 datasetpath = 
 numevents = 1 
 
-[94XSynch]
+[Synch_2017]
 groups = AOD
 datasetpath = 
 
