--- a/Input/default102X.ini
+++ b/Input/default102X.ini
@@ -13,7 +13,8 @@ groups = StandardModel SUSY
        CMSSW94X CMSSW102X
        Aachen Imperial FastSim Scan CMSSM Summer16 Spring16 Fall17 Autumn18
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
-       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T6bbllslepton
+       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan
+       Signal TChiSlepSnu T6bbllslepton T6qqllslepton Squark Sbottom
        at13TeV at25ns noPU
        SingleElectron DoubleElectron SingleMuon DoubleMu HT MuEG MET 
        Data MC AOD RelVal MiniAOD MiniAODv2 MiniAODv3 ReReco
