--- a/Analyzers/trees2017Signal102X.ini
+++ b/Analyzers/trees2017Signal102X.ini
@@ -1,9 +1,9 @@
 [Analyzer:FinalTrees]
 type = GenericAnalyzer
-path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
-module = DiLeptonTreesFromMiniAODNoTaus
-imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeights,vertexWeightsUp,vertexWeightsDown,btagEffMap,isolationFunctor
-#electrons = "slimmedElectrons"
+path = SuSyAachen.DiLeptonHistograms.DiLeptonSystematicTreesFromMiniAOD_cfi
+module = DiLeptonSystematicTreesFromMiniAODNoTaus
+imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,LeptonFastSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeightsSignal,vertexWeightsSignalUp,vertexWeightsSignalDown,btagEffMap,isolationFunctor
+#electrons = "<taskname>d0Electrons"
 electrons = "<taskname>IsoElectrons"
 #muons = "<taskname>basicMuonsPAT"
 muons = "<taskname>IsoMuons"
@@ -18,18 +18,14 @@ isoTracks = "<taskname>basicIsolatedTracks"
 vertices = "<taskname>basicVertices"
 met = cms.InputTag("slimmedMETsModifiedMET", "", "Analysis")
 storeMetFilters = True
-bTagEfficiencies = bTagEffMapPars2017
+bTagEfficiencies = bTagEffMapParsFastSim2017
 BTagCalibration = BTagCalibrationPars2017
 BTagCalibrationReader = BTagCalibrationReaderPars2017
 LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2017
+LeptonFastSimScaleFactors = LeptonFastSimScaleFactorMapPars2017
 vertexWeights = vertexWeightsPars2017
 vertexWeightsUp = vertexWeightsParsUp2017
 vertexWeightsDown = vertexWeightsParsDown2017
 isolationDefinitions = isolationDefinitions2017
-metFilterNames=metFilterNamesData2017
-eeTriggerNames=eeTriggerNames2017
-emTriggerNames=emTriggerNames2017
-mmTriggerNames=mmTriggerNames2017
-htTriggerNames=htTriggerNames2017
-metTriggerNames=metTriggerNames2017
+metFilterNames=metFilterNamesFastSim2017
 
