--- a/Mix/mc2017.ini
+++ b/Mix/mc2017.ini
@@ -6,7 +6,7 @@ tasks = cuts2017Dilepton102X
 job = RelValTTbar_2017
 
 [synch]
-job = 94XSynch
+job = Synch_2017
 
 [weights]
 configs = Input/default102X.ini Input/weightsMC2017.ini Analyzers/genWeightTrees.ini
