--- a/Analyzers/trees2017DATA102X.ini
+++ b/Analyzers/trees2017DATA102X.ini
@@ -5,7 +5,7 @@ module = DiLeptonTreesFromMiniAODNoTaus
 imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeights,vertexWeightsUp,vertexWeightsDown,btagEffMap,isolationFunctor
 #electrons = "slimmedElectrons"
 electrons = "<taskname>IsoElectrons"
-#muons = "<taskname>basicMuonsPAT"
+#muons = "<taskname>d0Muons"
 muons = "<taskname>IsoMuons"
 looseElectrons = "<taskname>LooseElectrons"
 looseMuons = "<taskname>LooseMuons"
