--- a/CfgMerge/mergeData2016B.ini
+++ b/CfgMerge/mergeData2016B.ini
@@ -7,7 +7,7 @@ counterSum = True
 
 [dileptonTree:cuts2016Dilepton]
 treeProducerName = FinalTrees
-objects = EE EMu MuMu
+objects = MuMu EE EMu
 #~ EEDataset = .*DoubleElectron_Run2016B*
 EEDataset = .*on_Run2016B*
 EESelection = 
