--- a/CfgMerge/mergeData2016C.ini
+++ b/CfgMerge/mergeData2016C.ini
@@ -7,7 +7,7 @@ counterSum = True
 
 [dileptonTree:cuts2016Dilepton]
 treeProducerName = FinalTrees
-objects = EE EMu MuMu
+objects = MuMu EE EMu
 EEDataset = .*on_Run2016C*
 EESelection = 
 EEProcessors = overlapHighPt 
