--- a/Input/default102X.ini
+++ b/Input/default102X.ini
@@ -40,6 +40,9 @@ analysispath = <general|OutputPath>/PAT
 localhistopath = <general|OutputPath>/PAT/Histos
 localjobhistopath = <general|OutputPath>/PAT/TestHistos
 mergedhistopath = <general|OutputPath>/PAT/MergedHistos
+cleaningpath = <general|OutputPath>/../Cleaning
+processedpath = <general|OutputPath>/../processedTrees
+treespath = <general|OutputPath>/../trees
 tasksPath =  <general|InputPath>/../tasks
 analogpath = <general|OutputPath>/LOG/analysis
 inputDBS = global
